[package]
name = "payment-engine"
version = "1.0.0"
edition = "2021"

[features]
default = []
benchmarks = []

[dependencies]
clap = "3.2.17"
csv = "1.1.6"
serde = {version = "1.0.143", features = ["derive"]}
simple-error = "0.2.3"
slog = "2.7.0"
slog-async = "2.7.0"
slog-json = "2.6.1"
slog-term = "2.9.0"
termios = "0.3.3"
tokio = { version = "1.20.1", features = ["full"] }
keyvaluestore = { git = "https://github.com/sportsball-ai/keyvaluestore-rs", rev = "d70ff761e8231fd38d4c68ddec495bb89b0a1f8f" }
redis = "0.21.5"
rmp-serde = "1.1.0"
chrono = "0.4.22"
flate2 = "1.0.24"
rand = "0.8.5"
serde_json = "1.0.83"
rusoto_core = "0.48.0"
rusoto_credential = "0.48.0"
rocket = {version="0.5.0-rc.2", features= ["json"]}
rocket_cors = "0.5.2"
serde_yaml = "0.9.10"



